Initial add-on based on magnifier code from Paul

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository contains the source code of the add-on Search SpyBot.
+This repository contains the source code of the add-on Magnifier
